# stm32-learning-platform

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  tsconfig.scripts.json
.github/workflows/: ci.yml  pages.yml
.superpowers/sdd/: curriculum-firmware-task-5-report.md  curriculum-firmware-task-6-report.md  task-5-report.md
assessments/practicals/: gate-01.json  gate-02.json  gate-03.json  gate-04.json  gate-05.json  gate-06.json
assessments/question-banks/: assessment-w01.json  assessment-w02.json  assessment-w03.json  assessment-w04.json  assessment-w05.json  assessment-w06.json  assessment-w07.json  assessment-w08.json  assessment-w09.json  assessment-w10.json  assessment-w11.json  assessment-w12.json  assessment-w13.json  assessment-w14.json  assessment-w15.json  assessment-w16.json  assessment-w17.json  (+8 more)
curriculum/: course-map.json  knowledge-tags.json  source-api-inventory.json
firmware/: projects.json
firmware/device-test-v1/: CMakeLists.txt  STM32F103xx_FLASH.ld  device-test-v1.ioc
firmware/device-test-v1/App/: app.c  device_protocol.c  device_protocol.h  device_tests.c  device_tests.h  device_tests_stm32.c  device_tests_stm32.h
firmware/device-test-v1/Core/Inc/: main.h  stm32f1xx_hal_conf.h
firmware/device-test-v1/Core/Src/: gpio.c  rtc.c
outputs/: README.md  device-test-v1.elf  device-test-v1.hex  stm32-hardware-evidence.json  stm32-learning-platform-implementation-roadmap.md  stm32-learning-platform-verification.md
web/: index.html  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+419 files in other folders)
